# saluki

./: .bazelignore  .bazelrc  .datadog-agent-version  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  .vale.ini  404.html  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-3rdparty.csv  METRIC_TAG_FILTERLIST_README.md  MODULE.bazel  Makefile  NOTICE  README.md  SECURITY.md  adp-test.yaml  buf.gen.yaml  buf.yaml  clippy.toml  deny.toml  hashmap.json  index.html  license-tool.toml  millstone-test.yaml  mise.toml  otlp_trace_optimization.md  package-lock.json  package.json  renovate.json  renovate.json5  repository.datadog.yml  (+3 more)
fuzz/: AGENT.md  Cargo.toml  dogstatsd_multi.ebnf  dogstatsd_multi_offset.ebnf  dogstatsd_offset.ebnf  grammar.ebnf
fuzz/fuzz_targets/: apd.rs
lib/agent-data-plane-config/: Cargo.toml
lib/agent-data-plane-config-system/: Cargo.toml  build.rs
lib/agent-data-plane-config-system/src/: bootstrap.rs  datadog_agent.rs  dynamic.rs  env_config.rs  lib.rs  loaded.rs  remote_agent.rs  saluki_env_overlay.rs  saluki_only.rs  system.rs  witness_impl.rs
lib/agent-data-plane-config-system/src/smoke_test/: mod.rs
lib/agent-data-plane-config-system/src/translate/: mod.rs
lib/agent-data-plane-config-system/src/translators/: datadog_translator.rs  mod.rs
lib/agent-data-plane-config-system/src/witness_impl/: control.rs  dogstatsd.rs  forwarder.rs  metrics.rs  otlp.rs  traces.rs  workload.rs
lib/agent-data-plane-config/src/: authority.rs  bootstrap.rs  control.rs  defaults.rs  dogstatsd.rs  lib.rs  live.rs  model.rs  saluki_only.rs  shared.rs  views.rs
lib/agent-data-plane-config/src/domains/: checks.rs  dogstatsd.rs  mod.rs  multi_region_failover.rs  otlp.rs  traces.rs
lib/datadog-agent-commons/: Cargo.toml
lib/datadog-agent-commons/src/: lib.rs
lib/datadog-agent-commons/src/ipc/: config.rs  session.rs  tls.rs
lib/datadog-agent-commons/src/platform/: linux_impl.rs  mod.rs  windows_impl.rs
lib/datadog-protos/: Cargo.toml  build.rs
lib/datadog-protos/proto/: README.md  agent_payload.proto  dd_metric.proto  dd_trace.proto  ddsketch_full.proto
lib/datadog-protos/proto/datadog-agent/: README.md
lib/datadog-protos/src/: lib.rs
lib/ddsketch/: BUILD.bazel  Cargo.toml  build.rs
lib/ddsketch-agent/: Cargo.toml  build.rs
lib/ddsketch-agent/benches/: insert.rs
lib/ddsketch-agent/src/: lib.rs
lib/ddsketch-agent/tests/: one_thousand_batched_points_ddsketch.rs  one_thousand_single_points_buffered_ddsketch.rs  one_thousand_single_points_ddsketch.rs  ten_batched_points_buffered_ddsketch.rs  ten_batched_points_ddsketch.rs  ten_single_points_buffered_ddsketch.rs  ten_single_points_ddsketch.rs
lib/ddsketch-agent/tests/common/: mod.rs
lib/ddsketch/benches/: agent_insert.rs  insert.rs
lib/ddsketch/src/: common.rs  ddsketch.rs  lib.rs  params.rs
lib/ddsketch/src/agent/: bin.rs  bucket.rs  config.rs  mod.rs  sketch.rs
lib/ddsketch/src/canonical/: error.rs  mod.rs  sketch.rs
lib/ddsketch/tests/: one_thousand_batched_points_ddsketch.rs  one_thousand_single_points_ddsketch.rs  ten_batched_points_ddsketch.rs  ten_single_points_ddsketch.rs
lib/ddsketch/tests/common/: mod.rs
lib/foldspace/: Cargo.toml
lib/foldspace/src/: batch.rs  inflight.rs  lib.rs  runner.rs  sender.rs  translator.rs  transport.rs  wire.rs  worker.rs
lib/foldspace/tests/: file_to_stateful_grpc.rs
lib/foldspace/tests/fixtures/: stateful_logs.txt
lib/integration-check/: Cargo.toml
lib/integration-check/src/: event_platform.rs  histogram.rs  service_check.rs
lib/integration-check/src/sink/: console.rs  cshlib.rs  mod.rs
lib/memory-accounting/: BUILD.bazel  Cargo.toml
lib/memory-accounting/src/: allocator.rs  api.rs  builder.rs  cpu.rs  grant.rs  lib.rs  limiter.rs  partitioner.rs  registry.rs  test_util.rs  verifier.rs
lib/memory-accounting/tests/: allocator_installed.rs  allocator_not_installed.rs
lib/ottl/: BUILD.bazel  Cargo.toml
lib/ottl/benches/: parser.rs
lib/ottl/docs/: README.md
lib/ottl/docs/ebnf/: ottl.ebnf  ottl.peg
lib/ottl/src/: README.md  editors.rs  helpers.rs  lexer.rs  mod.rs  parser.rs  tests.rs
lib/process-memory/: BUILD.bazel  Cargo.toml
lib/process-memory/src/: aix.rs  darwin.rs  lib.rs  linux.rs  windows.rs
lib/process-memory/tests/: aix.rs  no_runtime_allocations.rs
lib/saluki-antithesis/: Cargo.toml
lib/saluki-antithesis/src/: lib.rs
lib/saluki-api/: BUILD.bazel  Cargo.toml
lib/saluki-api/src/: lib.rs
lib/saluki-app/: BUILD.bazel  Cargo.toml
lib/saluki-app/src/: accounting.rs  api.rs  bootstrap.rs  config.rs  dogstatsd.rs  dynamic_api.rs  lib.rs  logging.rs  memory.rs  metrics.rs  supervision.rs  tls.rs
lib/saluki-common/: BUILD.bazel  Cargo.toml
lib/saluki-common/src/: collections.rs  deser.rs  hash.rs  iter.rs  lib.rs  rate.rs  scrubber.rs  strings.rs  time.rs
lib/saluki-common/tests/: allocator_installed.rs  allocator_not_installed.rs
lib/saluki-component-config/: Cargo.toml
lib/saluki-component-config/src/: autoscaling_failover.rs  checks.rs  cluster_agent.rs  dogstatsd.rs  dynamic.rs  events.rs  forwarder.rs  lib.rs  logs.rs  metrics.rs  otlp.rs  service_checks.rs  traces.rs  workload.rs
lib/saluki-components/: BUILD.bazel  Cargo.toml  build.rs
lib/saluki-components/benches/: aggregate_context_snapshot.rs  normalize.rs  otlp_traces.rs  scheduler.rs  tag_filterlist.rs
lib/saluki-components/etc/: ignored_keys.yaml
lib/saluki-components/src/: config.rs  lib.rs
lib/saluki-components/wit/: check.wit
lib/saluki-config/: BUILD.bazel  Cargo.toml
lib/saluki-config/src/: deserializer.rs  duration_string.rs  lib.rs  provider.rs  refresher.rs  remote.rs  secrets.rs  space_separated.rs
lib/saluki-config/tests/: config_duplicate_keys.rs
lib/saluki-config2/: Cargo.toml
lib/saluki-config2/src/: deser.rs  lib.rs  value.rs
lib/saluki-context/: BUILD.bazel  Cargo.toml
lib/saluki-context/benches/: tagset.rs
lib/saluki-context/src/: bitmap.rs  cache.rs  context.rs  expiry.rs  hash.rs  lib.rs  origin.rs  resolver.rs  tags.rs
(+174861 files in other folders)
