[workspace]
members = [
  "bin/agent-data-plane",
  "bin/correctness/airlock",
  "bin/correctness/ground-truth",
  "bin/correctness/metrics-intake",
  "bin/correctness/millstone",
  "bin/correctness/stele",
  "lib/datadog-protos",
  "lib/ddsketch-agent",
  "lib/memory-accounting",
  "lib/process-memory",
  "lib/saluki-api",
  "lib/saluki-app",
  "lib/saluki-components",
  "lib/saluki-config",
  "lib/saluki-context",
  "lib/saluki-core",
  "lib/saluki-env",
  "lib/saluki-error",
  "lib/saluki-event",
  "lib/saluki-health",
  "lib/saluki-io",
  "lib/saluki-metadata",
  "lib/saluki-metrics",
  "lib/saluki-tls",
  "lib/stringtheory",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DataDog/saluki"

[workspace.dependencies]
datadog-protos = { path = "lib/datadog-protos" }
ddsketch-agent = { path = "lib/ddsketch-agent" }
memory-accounting = { path = "lib/memory-accounting" }
process-memory = { path = "lib/process-memory" }
saluki-api = { path = "lib/saluki-api" }
saluki-app = { path = "lib/saluki-app" }
saluki-components = { path = "lib/saluki-components" }
saluki-config = { path = "lib/saluki-config" }
saluki-context = { path = "lib/saluki-context" }
saluki-core = { path = "lib/saluki-core" }
saluki-env = { path = "lib/saluki-env" }
saluki-error = { path = "lib/saluki-error" }
saluki-event = { path = "lib/saluki-event" }
saluki-health = { path = "lib/saluki-health" }
saluki-io = { path = "lib/saluki-io" }
saluki-metadata = { path = "lib/saluki-metadata" }
saluki-metrics = { path = "lib/saluki-metrics" }
saluki-tls = { path = "lib/saluki-tls" }
stele = { path = "bin/correctness/stele" }
stringtheory = { path = "lib/stringtheory" }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.7", default-features = false }
bytes = { version = "1", default-features = false }
protobuf = { version = "3.3.0", default-features = false, features = ["with-bytes"] }
protobuf-codegen = { version = "3.3.0", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
snafu = { version = "0.8", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
ahash = { version = "0.8", default-features = false, features = ["std", "runtime-rng"] }
async-compression = { version = "0.4.13", default-features = false }
bitmask-enum = { version = "2.2", default-features = false }
figment = { version = "0.10", default-features = false }
hostname = { version = "0.4", default-features = false }
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1.0", default-features = false }
hyper = { version = "1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false, features = ["aws-lc-rs", "http2", "rustls-native-certs"] }
hyper-util = { version = "0.1.10", default-features = false }
indexmap = { version = "2", default-features = false }
k8s-openapi = { version = "0.22", default-features = false }
kube = { version = "0.94", default-features = false }
memchr = { version = "2.7", default-features = false }
metrics = { version = "0.24", default-features = false }
metrics-util = { version = "0.18", default-features = false }
nom = { version = "7", default-features = false }
ordered-float = { version = "4.6", default-features = false }
paste = { version = "1", default-features = false }
pin-project = { version = "1.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
proptest = { version = "1.6", default-features = false }
prost = { version = "0.13", default-features = false }
quanta = { version = "0.12", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_distr = { version = "0.4.3", default-features = false }
regex = { version = "1.11", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std", "tls12"] }
similar-asserts = { version = "1.5", default-features = false }
slab = { version = "0.4", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2", default-features = false }
ndarray = { version = "0.16", default-features = false }
ndarray-stats = { version = "0.6", default-features = false }
noisy_float = { version = "0.2", default-features = false }
libc = { version = "0.2.169", default-features = false }
socket2 = { version = "0.5.7", default-features = false }
containerd-client = { version = "0.6.0", default-features = false }
tonic-build = { version = "0.12", default-features = false }
tonic = { version = "0.12", default-features = false }
arc-swap = { version = "1.7.1", default-features = false }
async-stream = { version = "0.3.5", default-features = false }
futures = { version = "0.3.30", default-features = false }
prost-types = { version = "0.13", default-features = false }
serde_json = { version = "1.0.135", default-features = false, features = ["std"] }
rustls-pemfile = { version = "2.2", default-features = false }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["aws_lc_rs"] }
anyhow = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytesize = { version = "1.3.0", default-features = false, features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
dhat = { version = "0.3", default-features = false }
average = { version = "0.15.1", default-features = false }
loom = { version = "0.7", default-features = false }
trybuild = { version = "1", default-features = false }
tokio-test = { version = "0.4.4", default-features = false }
simdutf8 = { version = "0.1.5", default-features = false }
smallvec = { version = "1.13", default-features = false }
windows-sys = { version = "0.59", default-features = false }
rustls-native-certs = { version = "0.8", default-features = false }
hashbrown = { version = "0.15", default-features = false }
quick_cache = { version = "0.6", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false }
float-cmp = { version = "0.10", default-features = false }
tower-http = { version = "0.6", default-features = false }
bollard = { version = "0.17", default-features = false }
clap = { version = "4.5.26", default-features = false }
reqwest = { version = "0.12.12", default-features = false }
lading-payload = { git = "https://github.com/DataDog/lading", tag = "v0.25.5" }
serde_yaml = { version = "0.9", default-features = false }
serde_with = { version = "3.12.0", default-features = false, features = ["macros"] }
triomphe = { git = "https://github.com/Manishearth/triomphe.git", rev = "3c3d47a3afdf43ad776769e20616bb4d5f919a7f", default-features = false }
chrono-tz = { version = "0.10", default-features = false }
iana-time-zone = { version = "0.1", default-features = false }
backon = { version = "1", default-features = false }
http-serde-ext = { version = "1", default-features = false }
uuid = { version = "1.11.0", default-features = false }
rcgen = { version = "0.13.1", default-features = false }
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", default-features = false }
axum-extra = { version = "0.9", default-features = false }
papaya = { version = "0.1.7", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 4
debug = true

[profile.optimized-release]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = false

[profile.optimized-debug-release]
inherits = "optimized-release"
debug = true

[workspace.lints.clippy]
new_without_default = "allow"
