[workspace]
members = [
  "bin/agent-data-plane",
  "bin/correctness/airlock",
  "bin/correctness/datadog-intake",
  "bin/correctness/ground-truth",
  "bin/correctness/millstone",
  "bin/correctness/stele",
  "lib/ddsketch-agent",
  "lib/memory-accounting",
  "lib/process-memory",
  "lib/protos/containerd",
  "lib/protos/datadog",
  "lib/protos/otlp",
  "lib/saluki-api",
  "lib/saluki-app",
  "lib/saluki-common",
  "lib/saluki-components",
  "lib/saluki-config", "lib/saluki-config2",
  "lib/saluki-context",
  "lib/saluki-core",
  "lib/saluki-env",
  "lib/saluki-error",
  "lib/saluki-health",
  "lib/saluki-io",
  "lib/saluki-metadata",
  "lib/saluki-metrics",
  "lib/saluki-tls",
  "lib/stringtheory",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DataDog/saluki"

[workspace.dependencies]
datadog-protos = { path = "lib/protos/datadog" }
containerd-protos = { path = "lib/protos/containerd" }
ddsketch-agent = { path = "lib/ddsketch-agent" }
memory-accounting = { path = "lib/memory-accounting" }
process-memory = { path = "lib/process-memory" }
saluki-api = { path = "lib/saluki-api" }
saluki-app = { path = "lib/saluki-app" }
saluki-common = { path = "lib/saluki-common" }
saluki-components = { path = "lib/saluki-components" }
saluki-config = { path = "lib/saluki-config" }
saluki-context = { path = "lib/saluki-context" }
saluki-core = { path = "lib/saluki-core" }
saluki-env = { path = "lib/saluki-env" }
saluki-error = { path = "lib/saluki-error" }
saluki-health = { path = "lib/saluki-health" }
saluki-io = { path = "lib/saluki-io" }
saluki-metadata = { path = "lib/saluki-metadata" }
saluki-metrics = { path = "lib/saluki-metrics" }
saluki-tls = { path = "lib/saluki-tls" }
stele = { path = "bin/correctness/stele" }
stringtheory = { path = "lib/stringtheory" }
otlp-protos = { path = "lib/protos/otlp" }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.8", default-features = false }
bytes = { version = "1", default-features = false }
protobuf = { version = "3.7", default-features = false, features = [
  "with-bytes",
] }
protobuf-codegen = { version = "3.7", default-features = false }
serde = { version = "1", default-features = false, features = [
  "derive",
  "std",
] }
snafu = { version = "0.8", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
async-compression = { version = "0.4.13", default-features = false, features = [
  "zlib",
  "zstd",
] }
bitmask-enum = { version = "2.2", default-features = false }
figment = { version = "0.10", default-features = false }
foldhash = { version = "0.2", default-features = false, features = ["std"] }
headers = { version = "0.4.0" }
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1.0", default-features = false }
hyper = { version = "1", default-features = false }
hyper-http-proxy = { version = "1.1", default-features = false, features = [
  "rustls-tls-native-roots",
] }
hyper-rustls = { version = "0.27", default-features = false, features = [
  "aws-lc-rs",
  "http2",
  "rustls-native-certs",
] }
hyper-util = { version = "0.1.10", default-features = false }
indexmap = { version = "2", default-features = false }
memchr = { version = "2.7", default-features = false }
metrics = { version = "0.24", default-features = false }
metrics-util = { version = "0.20", default-features = false }
nom = { version = "8", default-features = false }
ordered-float = { version = "5", default-features = false }
paste = { version = "1", default-features = false }
pin-project = { version = "1.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
proptest = { version = "1.7", default-features = false, features = ["std"] }
prost = { version = "0.14", default-features = false }
quanta = { version = "0.12", default-features = false }
rand = { version = "0.9", default-features = false }
rand_distr = { version = "0.5", default-features = false }
regex = { version = "1.11", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "logging",
  "std",
  "tls12",
] }
similar-asserts = { version = "1.5", default-features = false }
slab = { version = "0.4.11", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2", default-features = false }
ndarray = { version = "0.16", default-features = false }
ndarray-stats = { version = "0.6", default-features = false }
noisy_float = { version = "0.2", default-features = false }
libc = { version = "0.2.169", default-features = false }
socket2 = { version = "0.6", default-features = false }
tonic-prost-build = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
tonic = { version = "0.14", default-features = false }
arc-swap = { version = "1.7.1", default-features = false }
async-stream = { version = "0.3.5", default-features = false }
futures = { version = "0.3.30", default-features = false }
prost-types = { version = "0.14", default-features = false }
serde_json = { version = "1.0.138", default-features = false, features = [
  "std",
] }
faster-hex = { version = "0.10", default-features = false }
rustls-pki-types = { version = "1.13", default-features = false, features = ["alloc"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
  "aws_lc_rs",
] }
anyhow = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytesize = { version = "2", default-features = false, features = ["serde"] }
criterion = { version = "0.8", features = ["html_reports"] }
dhat = { version = "0.3", default-features = false }
average = { version = "0.16", default-features = false }
loom = { version = "0.7", default-features = false }
trybuild = { version = "1", default-features = false }
tokio-test = { version = "0.4.4", default-features = false }
simdutf8 = { version = "0.1.5", default-features = false }
smallvec = { version = "1.13", default-features = false, features = [
  "const_generics",
  "drain_filter",
  "union",
] }
windows-sys = { version = "0.59", default-features = false }
rustls-native-certs = { version = "0.8", default-features = false }
hashbrown = { version = "0.16", default-features = false }
quick_cache = { version = "0.6", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = [
  "alloc",
] }
float-cmp = { version = "0.10", default-features = false }
tower-http = { version = "0.6", default-features = false }
bollard = { version = "0.18", default-features = false }
reqwest = { version = "0.12.12", default-features = false }
lading-payload = { git = "https://github.com/DataDog/lading", tag = "v0.30.0" }
serde_yaml = { version = "0.9", default-features = false }
serde_with = { version = "3.12.0", default-features = false, features = [
  "macros",
] }
triomphe = { version = "0.1.15", default-features = false }
chrono-tz = { version = "0.10", default-features = false }
iana-time-zone = { version = "0.1", default-features = false }
backon = { version = "1", default-features = false }
http-serde-ext = { version = "1", default-features = false }
uuid = { version = "1.13", default-features = false }
rcgen = { version = "0.13.1", default-features = false }
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", default-features = false }
axum-extra = { version = "0.10", default-features = false }
papaya = { version = "0.2", default-features = false }
tempfile = { version = "3", default-features = false }
fs4 = { version = "0.13.1", default-features = false }
fnv = { version = "1", default-features = false }
twox-hash = { version = "2", features = ["xxhash64"] }
sha3 = { version = "0.10", default-features = false }
pyo3 = { version = "0.25", default-features = false }
test-strategy = { version = "0.4", default-features = false }
opentelemetry-semantic-conventions = { version = "0.30.0", default-features = false }
pyo3-ffi = { version = "0.25", default-features = false }
comfy-table = "7.1.4"
dtoa = { version = "1", default-features = false }
itoa = { version = "1", default-features = false }
ryu = { version = "1", default-features = false }
colored = { version = "3", default-features = false }
tracing-rolling-file = "0.1"
tracing-appender = { version = "0.2", default-features = false }
base64 = { version = "0.22.1", default-features = false }
treediff = { version = "5", default-features = false }
argh = { version = "0.1", default-features = false }
facet = { git = "https://github.com/facet-rs/facet", branch = "main", default-features = false }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main", default-features = false }
facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main", default-features = false }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main", default-features = false }
facet-yaml = { git = "https://github.com/facet-rs/facet", branch = "main", default-features = false }

[patch.crates-io]
# Forked version of `hyper-http-proxy` that removes an unused dependency on `rustls-native-certs`, which transitively depends
# on a version of `rustls-pemfile` that is no longer maintained and triggers a hit when running `cargo deny`.
hyper-http-proxy = { git = "https://github.com/tobz/hyper-http-proxy.git", branch = "main" }

[profile.release]
debug = true
lto = "thin"
codegen-units = 8

[profile.optimized-release]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.lints.clippy]
new_without_default = "allow"
uninlined_format_args = "allow"
map_entry = "allow"
mutable_key_type = "allow"
