[workspace]
members = [
  "bin/agent-data-plane",
  "bin/correctness/airlock",
  "bin/correctness/datadog-intake",
  "bin/correctness/millstone",
  "bin/correctness/panoramic",
  "bin/correctness/stele",
  "lib/agent-data-plane-config",
  "lib/agent-data-plane-config-system",
  "lib/datadog-agent/commons",
  "lib/datadog-agent/config",
  "lib/datadog-agent/config-overlay-model",
  "lib/datadog-agent/config-testing",
  "lib/ddsketch",
  "lib/ottl",
  "lib/process-memory",
  "lib/prometheus-exposition",
  "lib/protos/containerd",
  "lib/protos/datadog",
  "lib/protos/otlp",
  "lib/resource-accounting",
  "lib/saluki-api",
  "lib/saluki-app",
  "lib/saluki-common",
  "lib/saluki-component-config",
  "lib/saluki-components",
  "lib/saluki-config-tools",
  "lib/saluki-context",
  "lib/saluki-core",
  "lib/saluki-env",
  "lib/saluki-error",
  "lib/saluki-io",
  "lib/saluki-metadata",
  "lib/saluki-metrics",
  "lib/saluki-tls",
  "lib/stringtheory",
  "test/antithesis/harness",
  "test/architecture",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DataDog/saluki"

[workspace.dependencies]
agent-data-plane-config = { path = "lib/agent-data-plane-config" }
agent-data-plane-config-system = { path = "lib/agent-data-plane-config-system" }
datadog-agent-commons = { path = "lib/datadog-agent/commons" }
datadog-agent-config = { path = "lib/datadog-agent/config" }
datadog-agent-config-overlay-model = { path = "lib/datadog-agent/config-overlay-model" }
datadog-agent-config-testing = { path = "lib/datadog-agent/config-testing" }
datadog-protos = { path = "lib/protos/datadog" }
containerd-protos = { path = "lib/protos/containerd" }
ddsketch = { path = "lib/ddsketch" }
resource-accounting = { path = "lib/resource-accounting" }
process-memory = { path = "lib/process-memory" }
prometheus-exposition = { path = "lib/prometheus-exposition" }
saluki-api = { path = "lib/saluki-api" }
saluki-app = { path = "lib/saluki-app" }
saluki-common = { path = "lib/saluki-common" }
saluki-component-config = { path = "lib/saluki-component-config" }
saluki-components = { path = "lib/saluki-components" }
saluki-config-tools = { path = "lib/saluki-config-tools" }
saluki-context = { path = "lib/saluki-context" }
saluki-core = { path = "lib/saluki-core" }
saluki-env = { path = "lib/saluki-env" }
saluki-error = { path = "lib/saluki-error" }
saluki-io = { path = "lib/saluki-io" }
saluki-metadata = { path = "lib/saluki-metadata" }
saluki-metrics = { path = "lib/saluki-metrics" }
saluki-tls = { path = "lib/saluki-tls" }
stele = { path = "bin/correctness/stele" }
stringtheory = { path = "lib/stringtheory" }
ottl = { path = "lib/ottl" }
otlp-protos = { path = "lib/protos/otlp" }
async-trait = { version = "0.1", default-features = false }
atty = { version = "0.2", default-features = false }
axum = { version = "0.8", default-features = false }
bytes = { version = "1", default-features = false }
clap = { version = "4", default-features = false, features = [] }
protobuf = { version = "3.7", default-features = false, features = [
  "with-bytes",
] }
protobuf-codegen = { version = "3.7", default-features = false }
piecemeal = { git = "https://github.com/tobz/piecemeal" }
piecemeal-build = { git = "https://github.com/tobz/piecemeal" }
serde = { version = "1", default-features = false, features = [
  "derive",
  "std",
] }
snafu = { version = "0.9", default-features = false, features = ["std"] }
tinytemplate = { version = "1", default-features = false }
tokio = { version = "1.52.2", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
async-compression = { version = "0.4.42", default-features = false, features = [
  "gzip",
  "zlib",
  "zstd",
] }
zstd = { version = "0.13.3", default-features = false }
bitmask-enum = { version = "2.2", default-features = false }
facet = { version = "0.46.0", default-features = false, features = ["std"] }
figment = { version = "0.10", default-features = false }
foldhash = { version = "0.2", default-features = false, features = ["std"] }
headers = { version = "0.4", default-features = false }
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
hyper-http-proxy = { version = "1.1", default-features = false, features = [
  "rustls-tls-native-roots",
] }
hyper-rustls = { version = "0.27", default-features = false, features = [
  "aws-lc-rs",
  "http1",
  "http2",
  "rustls-native-certs",
] }
hyper-util = { version = "0.1.20", default-features = false }
indexmap = { version = "2", default-features = false }
memchr = { version = "2.8", default-features = false }
metrics = { version = "0.24", default-features = false }
metrics-util = { version = "0.20", default-features = false }
nom = { version = "8", default-features = false }
ordered-float = { version = "5", default-features = false }
pastey = { version = "0.2", default-features = false }
pin-project = { version = "1.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
prettyplease = { version = "0.2", default-features = false }
derive-where = { version = "1.6", default-features = false }
proptest = { version = "1.11", default-features = false, features = ["std"] }
prost = { version = "0.14", default-features = false }
quanta = { version = "0.12", default-features = false }
crossterm = { version = "0.29", default-features = false }
rand = { version = "0.10", default-features = false }
rand_distr = { version = "0.6", default-features = false }
k8s-openapi = { version = "0.27", default-features = false, features = ["v1_33"] }
kube = { version = "3.1", default-features = false }
regex = { version = "1.12", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "logging",
  "std",
  "tls12",
] }
schemars = { version = "0.8", default-features = false }
similar-asserts = { version = "2.0", default-features = false }
slab = { version = "0.4.12", default-features = false }
syn = { version = "2", default-features = false, features = ["full", "parsing", "visit-mut"] }
tokio-util = { version = "0.7.18", default-features = false }
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
typify = { version = "0.7", default-features = false }
url = { version = "2", default-features = false }
ndarray = { version = "0.17", default-features = false }
ndarray-stats = { version = "0.7", default-features = false }
noisy_float = { version = "0.2", default-features = false }
libc = { version = "0.2.186", default-features = false }
socket2 = { version = "0.6", default-features = false }
tonic-prost-build = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
tonic = { version = "0.14", default-features = false }
arc-swap = { version = "1.9.1", default-features = false }
async-stream = { version = "0.3.6", default-features = false }
futures = { version = "0.3.32", default-features = false }
prost-types = { version = "0.14", default-features = false }
serde_json = { version = "1.0.149", default-features = false, features = [
  "std",
] }
faster-hex = { version = "0.10", default-features = false }
rustls-pki-types = { version = "1.14", default-features = false, features = [
  "alloc",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
  "aws_lc_rs",
] }
tokio-vsock = { version = "0.7", default-features = false }
anyhow = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytesize = { version = "2", default-features = false, features = ["serde"] }
criterion = { version = "0.8", features = ["html_reports"] }
dhat = { version = "0.3", default-features = false }
average = { version = "0.17", default-features = false }
loom = { version = "0.7", default-features = false }
trybuild = { version = "1", default-features = false }
tokio-test = { version = "0.4.5", default-features = false }
simdutf8 = { version = "0.1.5", default-features = false }
smallvec = { version = "1.15", default-features = false, features = [
  "const_generics",
  "drain_filter",
  "union",
] }
windows-sys = { version = "0.61", default-features = false }
rustls-native-certs = { version = "0.8", default-features = false }
hashbrown = { version = "0.17", default-features = false }
quick_cache = { version = "0.6", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = [
  "alloc",
] }
float-cmp = { version = "0.10", default-features = false }
tower-http = { version = "0.6", default-features = false }
bollard = { version = "0.21", default-features = false }
home = { version = "0.5", default-features = false }
reqwest = { version = "0.13", default-features = false }
lading-payload = { git = "https://github.com/DataDog/lading", rev = "e98e30524c8caa31d585703da790e15fd6f92573" }
serde_yaml = { version = "0.9", default-features = false }
serde_with = { version = "3.18.0", default-features = false, features = [
  "macros",
] }
triomphe = { version = "0.1.15", default-features = false }
chrono-tz = { version = "0.10", default-features = false }
iana-time-zone = { version = "0.1", default-features = false }
backon = { version = "1", default-features = false }
http-serde-ext = { version = "1", default-features = false }
uuid = { version = "1.23", default-features = false }
rcgen = { version = "0.14", default-features = false }
tikv-jemallocator = { version = "0.7", default-features = false }
axum-extra = { version = "0.12", default-features = false }
papaya = { version = "0.2", default-features = false }
tempfile = { version = "3", default-features = false }
fs4 = { version = "0.13.1", default-features = false }
fnv = { version = "1", default-features = false }
twox-hash = { version = "2", features = ["xxhash64"] }
shake = { version = "0.1", default-features = false }
test-strategy = { version = "0.4", default-features = false }
opentelemetry-semantic-conventions = { version = "0.32.0", default-features = false }
comfy-table = { version = "7", default-features = false }
dtoa = { version = "1", default-features = false }
itoa = { version = "1", default-features = false }
ryu = { version = "1", default-features = false }
colored = { version = "3", default-features = false }
tracing-rolling-file = "0.1"
tracing-appender = { version = "0.2", default-features = false }
base64 = { version = "0.22.1", default-features = false }
treediff = { version = "5", default-features = false }
argh = { version = "0.1", default-features = false }
rmp-serde = { version = "1.3", default-features = false }
serde_bytes = { version = "0.11.19", default-features = false }
num-traits = { version = "0.2", default-features = false }
chumsky = { version = "0.13", default-features = false }
logos = { version = "0.16", default-features = false }
lru-slab = { version = "0.1.2", default-features = false }
hickory-resolver = { version = "0.26", default-features = false }
antithesis-instrumentation = { version = "0.1" }
antithesis_sdk = { git = "https://github.com/antithesishq/antithesis-sdk-rust", rev = "78c9db56771f0f6b01cb5404765c5a96852c159c", default-features = false } # 0.2.8 is pinned to rand 0.8, rev version allows us to select workspace rand

[patch.crates-io]
# Forked version of `hyper-http-proxy` that removes an unused dependency on `rustls-native-certs`, which transitively depends
# on a version of `rustls-pemfile` that is no longer maintained and triggers a hit when running `cargo deny`.
hyper-http-proxy = { git = "https://github.com/tobz/hyper-http-proxy.git", branch = "main" }

[profile.devel]
inherits = "dev"

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
lto = "thin"
codegen-units = 8

[profile.optimized-release]
inherits = "release"
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1

[workspace.lints.clippy]
new_without_default = "allow"
uninlined_format_args = "allow"
map_entry = "allow"
mutable_key_type = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(system_allocator)'] }
