module(
    name = "saluki",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "protobuf", version = "29.3")

# Rust toolchain -- match rust-toolchain.toml
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate dependencies resolved from Cargo workspace
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
