[package]
name = "fuzz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]

libfuzzer-sys = "0.4"
arbitrary = "1"
barkus-core = { path = "../../barkus/crates/barkus-core" }
barkus-ebnf = { path = "../../barkus/crates/barkus-ebnf" }
saluki-io = { workspace = true }

[[bin]]
name = "apd"
path = "fuzz_targets/apd.rs"
test = false
doc = false

[lints]
workspace = true
