[package]
name = "agent-data-plane-config-system"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
agent-data-plane-config = { workspace = true }
arc-swap = { workspace = true }
bytesize = { workspace = true }
datadog-agent-config = { workspace = true }
saluki-component-config = { workspace = true }
saluki-config-tools = { workspace = true }
saluki-context = { workspace = true }
saluki-error = { workspace = true }
serde_json = { workspace = true }
stringtheory = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[build-dependencies]
datadog-agent-config-overlay-model = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
figment = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
