[package]
name = "agent-data-plane-config-system"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
agent-data-plane-config = { workspace = true }
bytesize = { workspace = true }
datadog-agent-config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
