[package]
name = "agent-data-plane-config"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# Otherwise a pure data model: avoid adding workspace dependencies. The two blessed exceptions are
# tokio[sync] and arc-swap, which back the live config view (`Live<T>`); the model owns that view so
# a consumer gets it without depending on the raw map or the Datadog source.
[dependencies]
arc-swap = { workspace = true }

# This is unfortunate; we need this for ListenAddress
# The choices are
# a) move ListenAddress to here: that doesn't make sense
# b) present unsanitized strings to the binary
# c) depend on saluki-io and parse the ListenAddress at the config boundary
#
# We have chosen c which means this cannot be a leaf, model-only crate as we intended.
saluki-io = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
