[package]
name = "datadog-protos"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
prost = { workspace = true, features = ["derive", "std"] }
protobuf = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost"] }

[build-dependencies]
protobuf-codegen = { workspace = true }
tonic-build = { workspace = true, features = ["prost"] }
