[package]
name = "datadog-protos"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
bytes = { workspace = true }
prost = { workspace = true, features = ["derive", "std"] }
prost-types = { workspace = true }
protobuf = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost"] }

[build-dependencies]
protobuf-codegen = { workspace = true }
tonic-build = { workspace = true, features = ["prost"] }

# All our dependencies are used in the generated code, which `cargo-machete` can't see into, so we
# ignore them explicitly to avoid false positives.
[package.metadata.cargo-machete]
ignored = ["bytes", "prost", "protobuf", "tonic"]
